styles/style.css
:root {
  --basic-black: #000000;
  --basic-blue:  #2f80ed;
  --basic-white: #ffffff;
  --grey-bg-light: #f2f2f2;
  --grey-bg-dark: #1f1f1f;

}

.page {
  min-width: 1100px;
  /* мы ещё не умеем делать мобильную версию сайта, */
  /* поэтому выше установлена минимальная ширина страницы */
  max-width: 1600px;
  /* выше установили ограничение по максимальной ширине */
  margin: 0 auto;
  /* выше для экранов больше 1600px отцентрировали весь контент */
  font-family: 'Helvetica Neue', Arial, sans-serif;
}

.link {
  color: var(--basic-blue);
  text-decoration: none;
}

.link::after {
  content: '\27F6';
  margin-left: 3px;
}

.section-title {
  margin: 0 auto;
  padding-bottom: 20px;
  width: 60%;
  font-size: 60px;
  line-height: 1.15;
  font-weight: 700;
  text-align: center;
}

.section-subtitle {
  margin: 0 auto;
  width: 60%;
  font-size: 24px;
  line-height: 34px;
  font-weight: 400;
  text-align: center;
}

.table {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 1100px;
  margin: 0 auto;
}

.table__cell {
  width: 250px;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.table__heading {
  margin: 0;
  font-size: 24px;
  line-height: 1.15;
  font-weight: 700;
}

.table__text {
  margin: 0;
  font-size: 18px;
  line-height: 1.2;
}

.header {
  height: 100vh;
  min-height: 600px;
  max-height: 756px;
  /* выше установили ограничения для секции */
  position: relative;
  display: flex;
  /* padding: 30px 0 30px 64px; */
  background-color: var(--grey-bg-light);
}

.header__logo {
  position: absolute;
  top: 30px;
  left: 64px;
  width: 183px;
  height: 32px;
}

.header__title {
  margin: auto 0;
  margin-left: 64px;
  width: 730px;
  font-size: 102px;
  line-height: 96px;
  font-weight: 700;
  z-index: 2;
}

.header__subtitle {
  position: absolute;
  bottom: 30px;
  left: 64px;
  width: 388px;
  font-size: 18px;
  line-height: 25px;
  font-weight: 400;
  z-index: 2;
}

.header__main-img {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 765px;
  height: 608px;
  z-index: 1;
}

/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
.header__square-pic {
  position: absolute;
  top: 64px;
  right: 0;
  height: 568px;
  width: 568px;
  background-color:var(--basic-blue);
}

.content {
  display: flex;
  flex-direction: column;
}

.description {
  margin: 0 auto;
  padding: 100px 0 50px 0;
  width: 80%;
}

.two-columns {
  display: flex;
  justify-content: space-between;
}

.two-columns__brief {
  margin: 0;
  width: 175px;
  font-size: 18px;
  line-height: 1.2;
  font-weight: 400;
  color: var(--basic-blue);
}

.two-columns__main-text {
  width: 80%;
  min-width: 784px;
}

.two-columns__paragraph {
  margin: 0;
  margin-bottom: 30px;
  font-size: 24px;
  line-height: 34px;
  font-weight: 400;
}

.two-columns__paragraph:last-of-type {
  margin-bottom: 0;
}

.two-columns__span-accent {
  font-weight: 700;
}

.digits {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  padding: 50px 0 100px;
  width: 80%;
}

.cell_place_digits {
  padding-top: 60px;
}

.feynman {
  position: relative;
  padding-top: 100px;
  height: 790px;
  background-color: var(--grey-bg-light);
  background-image: url("../images/feynman.png");
  background-size: 867px 637px;
  background-repeat: no-repeat;
  background-position: left bottom;
}

.feynman__title {
  padding-bottom: 70px;
  width: 648px;
  margin: 0 auto;
  font-size: 120px;
  line-height: 1.15;
  font-weight: 700;
  text-align: center;
}

.feynman__subtitle {
  font-size: 36px;
  line-height: 51px;
  text-align: center;
}

.feynman__link {
  position: absolute;
  top: 50%;
  transform: translateX(-50%);
  right: 0;
}

.kaufman {
  position: relative;
  padding: 90px 0;
  background-color: var(--grey-bg-dark);
  overflow: hidden;
  z-index: -2;
}

.section-title_place_kaufman,
.section-subtitle_place_kaufman {
  color: var(--basic-white);
}

/* и элемента с модификатором вида ключ-значение */
.table__cell_theme_dark {
  width: 200px;
  color: var(--basic-white);
  margin-right: 0;
  margin-top: 80px;
}

.kaufman__triangle {
  position: absolute;
  top: 0;
  right: -210px;
  width: 877px;
  height: 877px;
  z-index: -1;
}

